fixed text wrap and overflow

--- a/app/(styles)/globals.scss
+++ b/app/(styles)/globals.scss
@@ -256,3 +256,8 @@ textarea {
   height: 32px;
   page-break-after: avoid;
 }
+
+pre {
+  font-family: inherit;
+  white-space: pre-wrap;
+}
